Refactor CORS configuration to use dynamic origins
Updated CORS configuration to use allowed origins from application properties.